@@ -42,7 +42,7 @@ final class Token
 
     public function __toString(): string
     {
-        return \sprintf('%s(%s)', self::typeToString($this->type, true), $this->value);
+        return \sprintf('%s(%s)', $this->toEnglish(), $this->value);
     }
 
     /**
@@ -75,8 +75,13 @@ final class Token
         return $this->lineno;
     }
 
+    /**
+     * @deprecated since Twig 3.19
+     */
     public function getType(): int
     {
+        trigger_deprecation('twig/twig', '3.19', sprintf('The "%s" method is deprecated.', __METHOD__));
+
         return $this->type;
     }
 
@@ -86,6 +91,11 @@ final class Token
     public function getValue()
     {
         return $this->value;
+    }
+
+    public function toEnglish(): string
+    {
+        return self::typeToEnglish($this->type);
     }
 
     public static function typeToString(int $type, bool $short = false): string
