@@ -79,7 +79,7 @@ final class TokenStream
             $line = $token->getLine();
             throw new SyntaxError(\sprintf('%sUnexpected token "%s"%s ("%s" expected%s).',
                 $message ? $message.'. ' : '',
-                Token::typeToEnglish($token->getType()),
+                $token->toEnglish(),
                 $token->getValue() ? \sprintf(' of value "%s"', $token->getValue()) : '',
                 Token::typeToEnglish($type), $value ? \sprintf(' with value "%s"', $value) : ''),
                 $line,
@@ -116,7 +116,7 @@ final class TokenStream
      */
     public function isEOF(): bool
     {
-        return Token::EOF_TYPE === $this->tokens[$this->current]->getType();
+        return $this->tokens[$this->current]->test(Token::EOF_TYPE);
     }
 
     public function getCurrent(): Token
